SERVER-60420 Release the critical section early in the shard collection slow path

(cherry picked from commit e7c0fc2c3eac5d5fd35b29fcc7d1d5d52946c293)